# differentiator

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  count_expression  count_tree.cpp  diff_result.txt  diff_x.txt  diff_x_simplifaed.txt  diff_x_simplified.txt  diff_x_simplified_tree.txt  diff_x_tree.txt  diff_y.txt  diff_y_simplifaed.txt  diff_y_simplified.txt  diff_y_simplified_tree.txt  diff_y_tree.txt  differentiate_tree  differentiate_tree.cbp  input.txt  main.cpp  origin_tree.txt  print_latex_referat  print_latex_referat.cbp  print_tree  print_tree_latex  print_tree_latex.cbp  read_expression  referat.tex  result.txt  simplify_result.txt  simplify_tree  simplify_tree.cbp  test_latex.txt  test_latex_expr.txt  tree_graph.dot
auxilary_functions/: akinator_functions.h  bor.cpp  bor.h  expression_parser.h  info.h  my_stack.cpp  my_stack.h  node_structure.h  print_tree_functions.h  strings_read_functions.h  tree_dfss.h  tree_print.h  tree_process_functions.h
function_information/: functions.h  operators.h
main_files/: LaTex_print.cpp  count_tree.cpp  differentiator.cpp  print_referat.cpp  print_tree.cpp  reader.cpp  simplifier.cpp
